# realtinywl

./: .gitignore  CMakeLists.txt  README.md  flake.nix
nix/: default.nix
src/: CMakeLists.txt  GreetdManager.cpp  GreetdManager.hpp  Greeter.qml  Main.qml  OutputDelegate.qml  OutputMenuBar.qml  PrimaryOutput.qml  SurfaceContent.qml  TiledWorkspace.qml  TiledWorkspace.qml.autosave  backend.cpp  backend.h  helper.cpp  helper.h  main.cpp  output.cpp  output.h  powermanager.cpp  powermanager.h  qmlengine.cpp  qmlengine.h  rootsurfacecontainer.cpp  rootsurfacecontainer.h  sessionmodel.cpp  sessionmodel.h  sessiontype.cpp  sessiontype.h  surfacewrapper.cpp  surfacewrapper.h  workspace.cpp  workspace.h
src/backends/: LoginManager.hpp
src/backends/greetd/: GreetdManager.cpp  GreetdManager.hpp
test/: flake.nix
